Added toString to all classes. Added equals and hashcode methods for node to compare nodes. Improved BidirectionalSearch algorithm to run with no faults in small graph test.